# shelled

./: CMakeLists.txt
docs/: presentation.tex
services/alice/: main.c
services/getd/: CMakeLists.txt  GPIOClass.cpp  GPIOClass.h  main.cpp
services/test-cocl/: CMakeLists.txt  main.c
services/test-tadc/: CMakeLists.txt  main.c
snode/fcommon/src/: limits.h
snode/fnet/src/: socket.h
snode/fnet/src/os/linux/: socket.c
snode/fnode/: CMakeLists.txt
snode/fnode/src/: commands.h  service.c  service.h
ui/: index.html
ui/SVG/: SVG.js
ui/admin-page/: admin-page.css  admin-page.js
ui/admin-page/dashboard/: dashboard.js
ui/admin-page/dashboard/relays/: relay.css  relay.js
ui/admin-page/dashboard/relays/led/: led.css  led.js
ui/admin-page/dashboard/sensors/: sensor.css  sensor.js
ui/admin-page/dashboard/sensors/switch/: switch.css  switch.js
ui/css/: styles.css
